# dolly_parton

./: .dockerignore  .env  .env.example  .env_example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  system_message_example.txt
.github/workflows/: docker-image.yml  rust.yml
src/: database.rs  main.rs  tictactoelogic.rs
src/commands/: add_goodmorning_message.rs  add_silly_message.rs  cal.rs  change_system_prompt.rs  clear_converstation.rs  compliment.rs  daddy.rs  dolly.rs  dollyhelp.rs  goodmorning.rs  gosleep.rs  hidolly.rs  mod.rs  ping.rs  quote.rs  rage.rs  randomnumber.rs  rizz.rs  silly.rs  socialcredits.rs  system_prompt.rs  valagents.rs  valgun.rs  version.rs  wonderful_command.rs  work.rs
src/components/: dot_env_reader.rs  logger.rs  mod.rs
src/components/types/: colors.rs  log.rs
src/messages/: ai_dolly.rs  cohere.rs  insult.rs  llm_provider.rs  message_handler.rs  mod.rs  ollama.rs  openai.rs  ping.rs
