[package]
name = "dolly_parton"
version = "6.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
rand = "0.8.5"
mysql = "24.0.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tic_tac_toe_rs = { git = "https://github.com/lamborghinigamer1/tic_tac_toe_rs" }
serde_json = "1.0"
