[package]
name = "dolly_parton"
version = "16.6.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serenity = { version = "0.12", features = ["cache"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rust-logger = "0.1"